--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <h4>H4 A two-day summit of talks, activities, and workshops for Lucid's Product org.</h4>
     <h5>H5 In-person / Online</h5>
   </div>
+  <br>
   <h6>H6 Lucid to the Moon</h6>
   <p>Paragraph Hello world! This is HTML5 Boilerplate.</p>
+  <img src="./img/page-headers/agenda.png" class="img-fluid"> 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
