Wrote some js to add active class to navigation bar link

--- a/FAQs.html
+++ b/FAQs.html
@@ -25,7 +25,7 @@
 
 <body>
   <include src="partials/navbar.html" locals='{
-        "page": ""
+        "page": "faqs"
     }'></include>
   <!-- START page content here -->
   <header class="page-header" id="">
