--- a/travel.html
+++ b/travel.html
@@ -25,7 +25,7 @@
 
 <body>
   <include src="partials/navbar.html" locals='{
-        "page": ""
+        "page": "travel"
     }'></include>
   <!-- START page content here -->
   <header class="page-header" id="">
