--- a/index.html
+++ b/index.html
@@ -26,19 +26,27 @@
 <body>
   <include src="partials/navbar.html"></include>
   <!-- Add your site or application content here -->
-  <h1>H1 Page Headers </h1>
-  <div class="hero-headline">
-    <h2>H2 Lucid to the Moon <span>2021 Product Summit</span></h2>
-  </div>
-  <br>
-  <div class="hero-subheadline">
-    <h4>H4 A two-day summit of talks, activities, and workshops for Lucid's Product org.</h4>
-    <h5>H5 In-person / Online</h5>
-  </div>
-  <br>
-  <h6>H6 Lucid to the Moon</h6>
-  <p>Paragraph Hello world! This is HTML5 Boilerplate.</p>
-  <img src="./img/page-headers/agenda.png" class="img-fluid"> 
+  <div class="hero-bg-image">
+    <div class="container hero-container">
+      <div class="hero-headline">
+        <h2>Lucid to the Moon <span>2021 Product Summit</span></h2>
+      </div>
+      <br>
+      <div class="hero-subheadline">
+        <h4>A two-day summit of talks, activities, and workshops for Lucid's Product org.</h4>
+        <h5>In-person / Online</h5>
+      </div>
+        <div class="card" style="width: 18rem;">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+      </div>
+    </div>
+      <br>
+</div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
