--- a/index.html
+++ b/index.html
@@ -26,19 +26,64 @@
 <body>
   <include src="partials/navbar.html"></include>
   <!-- Add your site or application content here -->
-  <h1>H1 Page Headers </h1>
-  <div class="hero-headline">
-    <h2>H2 Lucid to the Moon <span>2021 Product Summit</span></h2>
+  <div class="hero-bg-image">
+    <div class="container hero-container">
+      <div class="hero-headline row">
+        <h2>Lucid to the Moon <span>2021 Product Summit</span></h2>
+      <br>
+      <div class="mt-5 hero-subheadline">
+        <h4>A two-day summit of talks, activities, and workshops for Lucid's Product org.</h4>
+        <!-- <h5>In-person / Online</h5> -->
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+          <div class="col-5 mt-3">
+              <div class="card homepage-card-outline">
+                  <div class="card-horizontal homepage-card">
+                      <div class="">
+                          <img class="card-image" src="img/cards/saturn5.png" alt="Card image cap">
+                      </div>
+                      <div class="card-body homepage-card-body">
+                          <h5 class="card-title">Day 1:</h5>
+                          <h5 class="card-subtitle">Wednesday, June 9th</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-5 mt-3 mb-5">
+            <div class="card homepage-card-outline">
+                <div class="card-horizontal homepage-card">
+                    <div class="">
+                        <img class="card-image" src="img/cards/neil.png" alt="Card image cap">
+                    </div>
+                    <div class="card-body homepage-card-body">
+                        <h5 class="card-title">Day 1:</h5>
+                        <h5 class="card-subtitle">Wednesday, June 9th</p>
+                    </div>
+                </div>
+              </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-12">
+          <div class="mt-5 quote-card">
+            <h4>The goal of this event is to build team unity, become better at our craft, align on our vision and strategy, and motivate us into the coming year. 
+            </h4>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <h4>The goal of this event is to build team unity, become better at our craft, align on our vision and strategy, and motivate us into the coming year. 
+          <!-- Carousel -->
+          
+        </div>
+      </div>
   </div>
-  <br>
-  <div class="hero-subheadline">
-    <h4>H4 A two-day summit of talks, activities, and workshops for Lucid's Product org.</h4>
-    <h5>H5 In-person / Online</h5>
-  </div>
-  <br>
-  <h6>H6 Lucid to the Moon</h6>
-  <p>Paragraph Hello world! This is HTML5 Boilerplate.</p>
-  <img src="./img/page-headers/agenda.png" class="img-fluid"> 
+</div>
+</div>
+  <!-- <img src="./img/page-headers/agenda.png" class="img-fluid">  -->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
