Added acccordian to AMAs. Added page-container CSS class

--- a/AMAs.html
+++ b/AMAs.html
@@ -34,7 +34,7 @@
     </div>
   </header>
 
-  <div class="container google-form-container">
+  <div class="container page-container">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfrU7hkQD7ygYuLdru1JHSXY-d4kPeP6v2n3jAIGFaXgFHrQQ/viewform?embedded=true" width="100%" height="1562" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
 
