--- a/FAQs.html
+++ b/FAQs.html
@@ -28,11 +28,85 @@
         "page": "faqs"
     }'></include>
   <!-- START page content here -->
-  <header class="page-header" id="">
-    <div class="container">
-      <h2 class="page-title">Page Title</h2>
+  <header class="page-header" id="faqs-header">
+    <div class="container ">
+      <h2 class="page-title">FAQs</h2>
     </div>
   </header>
+
+  <div class="container page-container">
+    <div class="accordion accordion-flush" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            What is Product Summit and why are we asked to participate/attend?
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+          <div class="accordion-body">
+            While each product summit has a specific theme, the purpose of Lucid product summits generally falls into 4 buckets:
+            <ul>
+              <li>building team unity</li>
+              <li>becoming better at our craft</li>
+              <li>aligning on our vision and strategy</li>
+              <li>motivating us into the coming year</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            Do I have to attend all of the sessions?
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" >
+          <div class="accordion-body">
+            We ask that the entire Lucid Product organization (PMUXBDS) attend all sessions, while some other special guests from other departments are welcome to attend sessions most relevant/interesting to them.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            What about my other work/meetings?
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" >
+          <div class="accordion-body">
+            We try our hardest to schedule Product Summit during appropriate times for our product teams. Scheduling it midweek allows people to get ahead on work before Product Summit begins and catch up at the end of the week. Please try to move meetings to accommodate attending Product Summit live (though all sessions will be recorded for those who cannot attend).
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            Do I have to be vaccinated, wear a mask, and/or social distance for in-person activities?
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" >
+          <div class="accordion-body">
+            <p>Since Product Summit is a hybrid event (available in-person and online), we are requiring that all employees that want to attend in-office must adhere to Lucid's optional return to work policy. Employees must be vaccinated, are not required to wear a mask or social distance, but must adhere to Lucid's 25% office capacity policy. Sign up here if you are interested in attending in-office.</p>
+            <p>There will also be outdoor activities that will be open to all employees.*</p>
+            <p>* Limited to groups of 50 or less.</p>
+            <p>Please do not attend any in-person events if you are not feeling well or have any symptoms associated with COVID-19.</p>
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            Do I have to attend in-person activities if I'm not comfortable?
+          </button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" >
+          <div class="accordion-body">
+            All sessions are optional to attend in-person. While we would be happy to meet everyone in person, get to know each other, and share experiences, here is no requirement, repercussion, or disadvantage to not attending in-person.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- END page content here -->
   <include src="partials/footer.html"></include>
