--- a/Trivia.html
+++ b/Trivia.html
@@ -34,7 +34,7 @@
     </div>
   </header>
 
-  <div class="container google-form-container">
+  <div class="container page-container">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd-AT9ssS1VYlzka6IZj3C4qFccVdGJDWTSQyrJNQuULu3G9A/viewform?embedded=true" width="100%" height="1562" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </div>
 
