Added Travel Page

--- a/travel.html
+++ b/travel.html
@@ -28,11 +28,46 @@
         "page": "travel"
     }'></include>
   <!-- START page content here -->
-  <header class="page-header" id="">
+  <header class="page-header" id="travel-header">
     <div class="container">
-      <h2 class="page-title">Page Title</h2>
+      <h2 class="page-title">Travel</h2>
     </div>
   </header>
+
+  <div class="container page-container">
+    <div class="row">
+      <h4>For Local Employees</h4>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        Local employees (those that reside in the state of UT) will not need to book corporate travel for Product Summit. If you would like to attend in-person activities, please use your preferred method of transportation (car, bike, TRAX, FrontRunner, foot, or carpooling). Please note, you will not be reimbursed for any out-of-pocket travel expenses, mileage, or parking, or receive any type of "per diem" for your attending Product Summit in-person. Lucid may be able to assist with any travel concerns you may have. Please reach out to Sam Avila (<a href="mailto:savila@lucidchart.com">savila@lucidchart.com</a>) with any questions/concerns.
+      </div>
+      <div class="col-md">
+        <div id="salt-lake-city-image">
+          <img class="inserted-image" src="img/location/salt-lake-city.gif"></img>
+        </div>
+        <div class="image-caption">
+          Lucid is located south of Salt Lake City, UT
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <h4>For Out-of-State Employees</h4>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        Please work with Sam Avila (<a href="mailto:savila@lucidchart.com">savila@lucidchart.com</a>) to book your travel (including flight and hotel) for Product Summit from June 8-11. Lucid's corporate hotel partner is the <a href="https://www.hilton.com/en/hotels/slcjoes-embassy-suites-south-jordan-salt-lake-city/">Embassy Suites by Hilton South Jordan</a> located directly next to the Lucid office.
+      </div>
+      <div class="col-md">
+        <div id="embassy-suite-image">
+          <img class="inserted-image" src="img/location/embassy-suites.jpeg"></img>
+        </div>
+        <div class="image-caption">
+          Lucid's corporate travel hotel
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- END page content here -->
   <include src="partials/footer.html"></include>
