Added content to locations page. TODO add images.

--- a/locations.html
+++ b/locations.html
@@ -28,11 +28,72 @@
         "page": "locations"
     }'></include>
   <!-- START page content here -->
-  <header class="page-header" id="">
+  <header class="page-header" id="locations-header">
     <div class="container">
-      <h2 class="page-title">Page Title</h2>
+      <h2 class="page-title">Locations</h2>
     </div>
   </header>
+
+  <div class="container page-container">
+    <div class="row">
+      <h4>Location #1: Virtual (Zoom & Slack)</h4>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        All our sessions will be available live and recorded through our video conferencing platform Zoom. You will receive a Zoom Webinar meeting link through which all sessions should be attended. Additionally, please make sure to join the #2021_Product_Summit Slack channel to participate in the fun.
+      </div>
+      <div class="col-md">
+        <div id="salt-lake-city-image">
+          <img class="inserted-image" src="img/location/salt-lake-city.gif"></img>
+        </div>
+        <div class="image-caption">
+
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <h4>Location #2: Lucid Headquarters</h4>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <p>As of June 7th, Lucid is allowing all vaccinated employees to return to in-office activities without requiring masks so long as office capacity is capped at 25% of its employee headcount. We will be conducting as many sessions as possible in the office for those that want to attend in-person. Stay tuned for specific room locations.</p>
+        <p>Getting There</p>
+        <p><strong>Foot/Bike</strong></p>
+        <p>SOJO 1 is located just east of the  Embassy Suites by Hilton South Jordan.</p>
+        <p><strong>Car</strong></p>
+        <p>Describe directions for people who are getting to the venue by car.</p>
+      </div>
+      <div class="col-md">
+        <div id="salt-lake-city-image">
+          <img class="inserted-image" src="img/location/salt-lake-city.gif"></img>
+        </div>
+        <div class="image-caption">
+
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <h4>Location #3: South Jordan East Riverfront Pavilion</h4>
+    </div>
+    <div class="row">
+      <div class="col-md-8">
+        <p>We will host a few of our team building activities in this local park pavilion.</p>
+        <p>Getting There</p>
+        <p><strong>Foot/Bike</strong></p>
+        <p>Describe directions for people who are getting to the venue by.</p>
+        <p><strong>Car</strong></p>
+        <p>Describe directions for people who are getting to the venue by car.</p>
+      </div>
+      <div class="col-md">
+        <div id="salt-lake-city-image">
+          <img class="inserted-image" src="img/location/salt-lake-city.gif"></img>
+        </div>
+        <div class="image-caption">
+
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- END page content here -->
   <include src="partials/footer.html"></include>
