Added headers to agenda and speakers page

--- a/agenda.html
+++ b/agenda.html
@@ -28,9 +28,9 @@
         "page": "agenda"
     }'></include>
   <!-- START page content here -->
-  <header class="page-header" id="">
+  <header class="page-header" id="agenda-header">
     <div class="container">
-      <h2 class="page-title">Page Title</h2>
+      <h2 class="page-title">Agenda</h2>
     </div>
   </header>
 
