--- a/speakers.html
+++ b/speakers.html
@@ -28,9 +28,9 @@
         "page": "speakers"
     }'></include>
   <!-- START page content here -->
-  <header class="page-header" id="">
+  <header class="page-header" id="speakers-header">
     <div class="container">
-      <h2 class="page-title">Page Title</h2>
+      <h2 class="page-title">Speakers</h2>
     </div>
   </header>
 
