Agenda and PRofile Starter

--- a/agenda.html
+++ b/agenda.html
@@ -33,6 +33,34 @@
       <h2 class="page-title">Agenda</h2>
     </div>
   </header>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-12">
+        <p class="mb-4">Day 1</p>
+        <h4>June 9th, 2021</h4>
+        <p>All times are listed in Mountain Standard Time (MST)</p>
+      </div>
+    </div>
+    <div class="row mt-4 agenda-card">
+          <div class="col-2 p-4 agenda-card-date">
+            <h6>9:30 - 9:45 am</h6>
+          </div>
+          <div class="col-8 p-4 agenda-card-content">
+            <h6>Product Summit Kickoff</h6>
+            <p>Intros, Agenda, FAQs, Swag, Rules of Engagement. Hosted by Dan Lawyer</p>
+          </div>
+
+    </div>
+  <div class="row  mt-4 agenda-card">
+      <div class="col-2 p-4 agenda-card-date">
+        <h6>9:30 - 9:45 am</h6>
+      </div>
+      <div class="col-8 p-4 agenda-card-content">
+        <h6>Product Summit Kickoff</h6>
+        <p>Intros, Agenda, FAQs, Swag, Rules of Engagement. Hosted by Dan Lawyer</p>
+      </div>
+  </div>
+  </div>
 
   <!-- END page content here -->
   <include src="partials/footer.html"></include>
