--- a/speakers.html
+++ b/speakers.html
@@ -14,9 +14,10 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="css/custom.scss" rel="stylesheet">
   <!-- Place favicon.ico in the root directory -->
-
+  
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -33,6 +34,18 @@
       <h2 class="page-title">Speakers</h2>
     </div>
   </header>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="col-2">
+          <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+        </div>
+        <div class="col-8">
+            <h6>fdfwer</h6>
+        </div>
+       </div> 
+    </div>
+  </div>
 
   <!-- END page content here -->
   <include src="partials/footer.html"></include>
