--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="css/custom.scss" rel="stylesheet">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -41,7 +41,7 @@
     <div class="container">
       <div class="row">
           <div class="col-5 mt-3">
-              <div class="card homepage-card-outline">
+              <div class="homepage-card-outline">
                   <div class="card-horizontal homepage-card">
                       <div class="">
                           <img class="card-image" src="img/cards/saturn5.png" alt="Card image cap">
@@ -54,7 +54,7 @@
               </div>
           </div>
           <div class="col-5 mt-3 mb-5">
-            <div class="card homepage-card-outline">
+            <div class="homepage-card-outline">
                 <div class="card-horizontal homepage-card">
                     <div class="">
                         <img class="card-image" src="img/cards/neil.png" alt="Card image cap">
@@ -75,11 +75,31 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-5">
         <div class="col-12">
-          <h4>The goal of this event is to build team unity, become better at our craft, align on our vision and strategy, and motivate us into the coming year.
+          <h4>A Look Back at Product Summit 2020
           <!-- Carousel -->
-
+          <div id="carouselExampleFade" class="carousel slide carousel-fade mt-5" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/page-headers/agenda.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/page-headers/faqs.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/page-headers/agenda.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </div>
   </div>
@@ -90,6 +110,7 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
+
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
@@ -97,6 +118,7 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </body>
 
 </html>
