--- a/speakers.html
+++ b/speakers.html
@@ -35,18 +35,149 @@
     </div>
   </header>
   <div class="container">
-    <div class="row">
+    <div class="row mt-5 mb-5">
       <div class="col-12">
-        <div class="col-2">
-          <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2 pt-4">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Dan Lawyer <img src="/img/linkedin.svg"></a>
+  
+              <p class="pt-2">Senior business leader with a proven record of elevating performance, crafting superior strategy, building exceptional teams, delivering great products, and driving solid execution of product organizations.
+                Fun fact:</p>
+          </div>
         </div>
-        <div class="col-8">
-            <h6>fdfwer</h6>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2 pt-4">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Jamie Lyon                <img src="/img/linkedin.svg"></a>
+  
+              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
+                Fun fact:</p>
+          </div>
+        </div>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2 pt-4">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Jarom Chung <img src="/img/linkedin.svg"></a>
+  
+              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
+                Fun fact:</p>
+          </div>
+        </div>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2 pt-4">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Allen Liao                <img src="/img/linkedin.svg"></a>
+  
+              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
+                Fun fact:</p>
+          </div>
+        </div>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2 pt-4">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Taylor Halversen                <img src="/img/linkedin.svg"></a>
+  
+              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
+                Fun fact:</p>
+          </div>
+        </div>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Phil Badger <img src="/img/linkedin.svg"></a>
+              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
+                Fun fact:</p>
+          </div>
+        </div>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Dan Ebeling                <img src="/img/linkedin.svg"></a>
+              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
+                Fun fact:</p>
+          </div>
+        </div>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Saurabh Phadnis                <img src="/img/linkedin.svg"></a>
+              <p class="pt-2">Who is the speaker? This is where you can write a bio to detail your speaker's credentials and the unique perspectives they will bring to the conference.
+                Fun fact:</p>
+          </div>
+        </div>
+       </div> 
+    </div>
+    <hr>
+    <div class="row mt-5 mb-5">
+      <div class="col-12">
+        <div class="row speakers">
+          <div class="col-2">
+            <img class="img-fluid float-start" src="/img/speakers/Dan.png">
+          </div>
+          <div class="col-8 ml-2">
+              <a href="https://www.google.com/url?q=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fdan-lawyer-75919b%2F&sa=D">Brint Markle                <img src="/img/linkedin.svg"></a>
+              <p class="pt-2">Bio: Brint is Director of BD & Strategic Partnerships at Lucid. In his position, he leads our business development activities, product/strategic partnerships, and jointly drives integration platform vision and strategy in partnership with the product team. He frequently runs workshops and brainstorming sessions with our partners to deepen partner engagement and uncover new areas of shared value. Brint is a former founder of two outdoor technology companies, which he led from founding through early stage growth and acquisition.  He is also an Entrepreneur-in-Residence at MIT where he advises several technology start-ups, mostly helping them avoid the many mistakes he made as an entrepreneur ;)
+              Fun Fact: Brint used to live in Chile where he worked for a start-up microfinance organization, learned to speak ‘Chilean’ Spanish (cachai!?), and once skied into the crater of an active volcano.
+              </p>
+          </div>
         </div>
        </div> 
     </div>
   </div>
-
+  </div>
+  
   <!-- END page content here -->
   <include src="partials/footer.html"></include>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
